fix selenium test: make window larger to prevent cookie banner from covering admin link

--- a/src/web/static/common.css
+++ b/src/web/static/common.css
@@ -97,13 +97,3 @@ button {
 .tooltip:hover .tooltiptext {
     visibility: visible;
 }
-
-.sticky-footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    background-color: #FAFAFA;
-    text-align: center;
-    border-top: 1px solid black;
-}
